# wifi-warning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
.github/workflows/: release.yml
docs/: optimization-report.md
frontend/: index.html  settings.html  warning.html  wifi_picker.html
frontend/css/: style.css
frontend/js/: api.js  i18n.js  polling.js  settings.js  warning.js  wifi_picker.js
scripts/: browser-smoke-runner.js  browser-smoke.ps1  build-mingw.ps1  elevated-wifi-acceptance.ps1  external-acceptance.ps1  generate-icon.py  local-acceptance.ps1  package-portable.ps1  real-shortcut-scan-smoke.ps1  runtime-smoke.ps1  tray-smoke.ps1  validate-cmake.ps1
src/: main.cpp
src/core/: auto_start.cpp  auto_start.h  config_manager.cpp  config_manager.h  dyn_bcrypt.cpp  dyn_bcrypt.h  dyn_version.cpp  dyn_version.h  dyn_wlan.cpp  dyn_wlan.h  http_probe.cpp  http_probe.h  json.cpp  json.h  logger.cpp  logger.h  network_manager.cpp  network_manager.h  rule_engine.cpp  rule_engine.h  shortcut_manager.cpp  shortcut_manager.h  util.cpp  util.h  wifi_detector.cpp  wifi_detector.h  wifi_switcher.cpp  wifi_switcher.h
src/resources/: app.manifest  wifi-warning.rc  ww-launch.rc
src/ui/: api_handlers.cpp  api_handlers.h  browser_launcher.cpp  browser_launcher.h  http_server.cpp  http_server.h  tray_icon.cpp  tray_icon.h
src/ww-launch/: main.cpp
tests/: smoke.cpp
